--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,7 @@ body {
 .pulse-circle:before {
   animation: pulse-animate 2s ease-out infinite;
 }
+
 .pulse-circle:before {
   animation: pulse-animate 2s 1s ease-out infinite;
 }
@@ -49,4 +50,120 @@ body {
   100% {
     transform: scale(1.35);
   }
+}
+
+.container {
+  height: 50px;
+  width: 1px;
+  /* background: red; */
+  position: absolute;
+  animation: spin 3s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(-0deg);
+  }
+
+  to {
+    transform: rotate(-360deg);
+  }
+}
+
+.container:nth-child(1) {
+  animation-delay: .3s;
+}
+
+.container:nth-child(2) {
+  animation-delay: .6s;
+}
+
+.container:nth-child(3) {
+  animation-delay: .9s;
+}
+
+.container:nth-child(4) {
+  animation-delay: 1.2s;
+}
+
+.container:nth-child(5) {
+  animation-delay: 1.5s;
+}
+
+.container:nth-child(6) {
+  animation-delay: 1.8s;
+}
+
+.container:nth-child(7) {
+  animation-delay: 2.1s;
+}
+
+.container:nth-child(8) {
+  animation-delay: 2.4s;
+}
+
+.container:nth-child(9) {
+  animation-delay: 2.7s;
+}
+
+.container:nth-child(10) {
+  animation-delay: 3s;
+}
+
+.container .circle {
+  height: 10px;
+  width: 10px;
+  background: black;
+  border-radius: 50%;
+  animation: dots 3s linear infinite;
+}
+
+@keyframes dots {
+  from {
+    background: #0FB95D;
+  }
+
+  to {
+    background: hsl(148, 85%, 89%);
+  }
+}
+
+.container:nth-child(1) .circle {
+  animation-delay: .3s;
+}
+
+.container:nth-child(2) .circle {
+  animation-delay: .6s;
+}
+
+.container:nth-child(3) .circle {
+  animation-delay: .9s;
+}
+
+.container:nth-child(4) .circle {
+  animation-delay: 1.2s;
+}
+
+.container:nth-child(5) .circle {
+  animation-delay: 1.5s;
+}
+
+.container:nth-child(6) .circle {
+  animation-delay: 1.8s;
+}
+
+.container:nth-child(7) .circle {
+  animation-delay: 2.1s;
+}
+
+.container:nth-child(8) .circle {
+  animation-delay: 2.4s;
+}
+
+.container:nth-child(9) .circle {
+  animation-delay: 2.7s;
+}
+
+.container:nth-child(10) .circle {
+  animation-delay: 3s;
 }
